# geohashr

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
geohashr/: __init__.py  _geohashr.pyi
src/: lib.rs
tests/: test_bbox.py  test_decode.py  test_encode.py  test_neighbors.py
