[package]
name = "geohashr"
version = "1.3.0"
description = "Just another geohashing library"
authors = [
    "Giovanni Barillari <g@baro.dev>",
    "Paolo Quadri <pquadri10@gmail.com>"
]
license = "BSD-3-Clause"
edition = "2021"

keywords = ["geohash"]

readme = "README.md"
homepage = "https://github.com/gi0baro/geohashr"
repository = "https://github.com/gi0baro/geohashr"

include = [
    "/Cargo.toml",
    "/pyproject.toml",
    "/build.rs",
    "/LICENSE",
    "/README.md",
    "/src",
    "/geohashr",
    "/tests",
    "!__pycache__",
    "!tests/.pytest_cache",
    "!*.so",
]

[lib]
name = "_geohashr"
crate-type = ["cdylib"]

[dependencies]
geohash = { version = "=0.13" }
pyo3 = { version = "=0.20", features = ["extension-module", "generate-import-lib"] }
lazy_static = "1.4.0"

[build-dependencies]
pyo3-build-config = { version = "=0.20", features = ["resolve-config"] }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
