[package]
name = "geohashr"
version = "1.4.0"
description = "Just another geohashing library"
authors = [
    "Giovanni Barillari <g@baro.dev>",
    "Paolo Quadri <pquadri10@gmail.com>"
]
license = "BSD-3-Clause"
edition = "2021"

keywords = ["geohash"]

readme = "README.md"
homepage = "https://github.com/gi0baro/geohashr"
repository = "https://github.com/gi0baro/geohashr"

include = [
    "/Cargo.toml",
    "/pyproject.toml",
    "/LICENSE",
    "/README.md",
    "/src",
    "/geohashr",
    "/tests",
    "!__pycache__",
    "!tests/.pytest_cache",
    "!*.so",
]

[lib]
name = "_geohashr"
crate-type = ["cdylib"]

[dependencies]
geohash = { version = "=0.13" }
pyo3 = { version = "=0.22", features = ["extension-module", "generate-import-lib"] }
lazy_static = "1.4.0"

[target.'cfg(any(target_os = "freebsd", target_os = "windows"))'.dependencies]
mimalloc = { version = "0.1.43", default-features = false, features = ["local_dynamic_tls"] }

[target.'cfg(not(any(target_os = "freebsd", target_os = "windows")))'.dependencies]
tikv-jemallocator = { version = "0.6.0", default-features = false, features = ["disable_initial_exec_tls"] }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
