[project]
name = "geohashr"
authors = [
    {name = "Giovanni Barillari", email = "g@baro.dev"},
    {name = "Paolo Quadri", email = "pquadri10@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: GIS"
]

dynamic = [
    "description",
    "keywords",
    "license",
    "readme",
    "version"
]

requires-python = ">=3.9"
dependencies = []

[dependency-groups]
build = [
    'maturin~=1.8',
]
lint = [
    'ruff~=0.11',
]
test = [
    'pytest~=8.3',
]

all = [
    { include-group = 'build' },
    { include-group = 'lint' },
    { include-group = 'test' },
]

[project.urls]
Homepage = "https://github.com/gi0baro/geohashr"
Funding = "https://github.com/sponsors/gi0baro"
Source = "https://github.com/gi0baro/geohashr"

[build-system]
requires = ["maturin>=1.8.0,<2"]
build-backend = "maturin"

[tool.maturin]
module-name = "geohashr._geohashr"
bindings = "pyo3"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = 'double'

[tool.ruff.lint]
extend-select = [
    # E and F are enabled by default
    'B',      # flake8-bugbear
    'C4',     # flake8-comprehensions
    'C90',    # mccabe
    'I',      # isort
    'N',      # pep8-naming
    'Q',      # flake8-quotes
    'RUF100', # ruff (unused noqa)
    'S',      # flake8-bandit
    'W',      # pycodestyle
]
extend-ignore = [
    'S101', # assert is fine
]
mccabe = { max-complexity = 24 }

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
known-first-party = ['geohashr', 'tests']

[tool.ruff.lint.per-file-ignores]
'geohashr/__init__.py' = ['F401']
'tests/**' = ['B018', 'S110', 'S501']

[tool.uv]
package = false
